--- a/CSipSimple/res/layout/balancetransfer.xml
+++ b/CSipSimple/res/layout/balancetransfer.xml
@@ -22,7 +22,9 @@
         android:layout_above="@+id/textView4"
         android:layout_centerHorizontal="true"
         android:text="BALANCE TRANSFER"
+        android:layout_marginBottom="10dp"
         android:textColor="#000000"
+        android:textSize="16dp"
         android:textStyle="bold" />
 
     <TextView
@@ -32,6 +34,7 @@
         android:layout_alignTop="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:text="( Maltese Number only )"
+        android:visibility="gone"
         android:textColor="#000000" />
 
     <TextView
@@ -55,7 +58,7 @@
      android:inputType="phone"
         android:maxLength="15"
    
-        android:hint="0777xxxxx"
+        android:hint="enter number"
           android:lines="1"
           android:paddingLeft="60dp"
               android:textCursorDrawable="@drawable/cursor" 
