--- a/CSipSimple/res/layout/customcall.xml
+++ b/CSipSimple/res/layout/customcall.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/sipcall"
-       
+       android:visibility="gone"
         android:textStyle="bold" 
         android:layout_marginTop="5dip"
           android:background="@drawable/localcall"/>
