--- a/CSipSimple/res/layout/rate.xml
+++ b/CSipSimple/res/layout/rate.xml
@@ -22,6 +22,7 @@
         android:layout_above="@+id/textView4"
         android:layout_centerHorizontal="true"
         android:text="Check Rate"
+        android:textSize="16dp"
         android:textColor="#000000"
         android:textStyle="bold" />
 
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView1"
         android:layout_centerHorizontal="true"
-        android:text="(for all countries)"
+        android:text="(For All Countries)"
         android:textColor="#000000" />
 
     <TextView
@@ -48,16 +49,16 @@
 
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
         android:inputType="number"
-        android:maxLength="9"
+        android:maxLength="10"
    
         android:hint="country code"
           android:lines="1"
-          android:paddingLeft="100dp"
+          android:paddingLeft="70dp"
               android:textCursorDrawable="@drawable/cursor" 
             android:background="@drawable/bar"
               android:textColor="#000" 
@@ -105,6 +106,75 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
         android:text="Check Rate" 
+        
         android:onClick="onClick"/>
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/button1"
+        android:layout_marginTop="34dp"
+        android:text="Country"
+        android:layout_marginRight="15dp"
+           android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColor="#000" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignRight="@+id/editText1"
+        android:text="Prefix" 
+           android:textSize="16dp"
+        android:textStyle="bold"
+         android:textColor="#000" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:text="Rate" 
+           android:textSize="16dp"
+        android:textStyle="bold"
+         android:textColor="#000" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="28dp"
+           android:textSize="16dp"
+          android:layout_marginRight="15dp"
+         android:textColor="#000" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView9"
+        android:layout_alignRight="@+id/textView2"
+          android:textSize="16dp"
+         android:layout_marginRight="5dp"
+       
+         android:textColor="#000" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView10"
+        android:layout_alignRight="@+id/textView7"
+         android:textSize="16dp"
+        
+         android:textColor="#000"/>
      
 </RelativeLayout>
