Issues has been fixed balance not show proper add button in more dor did funtionality add account button also in more

--- a/CSipSimple/res/layout/accessno.xml
+++ b/CSipSimple/res/layout/accessno.xml
@@ -47,7 +47,7 @@
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="Enable Callthrough" 
+               android:text="Enable Call Through" 
             
                android:onClick="onClick" 
                  android:layout_marginLeft="5dp"
