--- a/CSipSimple/res/layout/dialer_digit.xml
+++ b/CSipSimple/res/layout/dialer_digit.xml
@@ -112,8 +112,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-           android:textColor="#000000"
+            android:layout_marginLeft="20dp"
+           android:textColor="#920000"
             android:text=""
+         
              android:textStyle="bold"
             android:hint="" />
         
