--- a/CSipSimple/res/menu/in_call_card_menu.xml
+++ b/CSipSimple/res/menu/in_call_card_menu.xml
@@ -9,26 +9,26 @@
         android:id="@+id/declineCallButton"
         android:showAsAction="never"
         android:title="@string/decline_call"/>
-    <item
+   <!--  <item
         android:id="@+id/clearCallButton"
         android:showAsAction="never"
-        android:title="@string/clear_call"/>
-    <item
+        android:title="@string/clear_call"/> -->
+  <!--   <item
         android:id="@+id/xferCallButton"
         android:showAsAction="never"
-        android:title="@string/xfer_uri"/>
+        android:title="@string/xfer_uri"/> -->
   <!--   <item
         android:id="@+id/transferCallButton"
         android:showAsAction="never"
         android:title="@string/transfer_to_call"/> -->
-    <item
+  <!--   <item
         android:id="@+id/holdCallButton"
         android:showAsAction="never"
-        android:title="@string/hold_call"/>
-    <item
+        android:title="@string/hold_call"/> -->
+  <!--   <item
         android:id="@+id/recordCallButton"
         android:showAsAction="never"
-        android:title="@string/record"/>
+        android:title="@string/record"/> -->
    <item
         android:id="@+id/zrtpAcceptance"
         android:showAsAction="never"
