--- a/res/layout/account_wizard.xml
+++ b/res/layout/account_wizard.xml
@@ -3,7 +3,7 @@
     android:id="@+id/account_layout"
     android:layout_width="fill_parent"
   
-      android:background="@drawable/background1"
+      android:background="@drawable/dev"
     android:layout_height="match_parent" >
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:text=""      
             android:textStyle="bold"
             android:textColor="#fff"    
-            android:paddingLeft="10dp"
+            android:paddingLeft="60dp"
            
              />
 
@@ -159,7 +159,7 @@
             <Button
                 android:id="@+id/acc_login"
                 android:layout_width="35dp"
-            android:layout_height="40dp"
+             android:layout_height="35dp"
                 android:layout_marginLeft="145dp"
                 android:layout_marginRight="145dp"
                 android:layout_marginTop="10dp"
@@ -289,7 +289,7 @@
             <Button
                 android:id="@+id/forget_button"
                  android:layout_width="35dp"
-               android:layout_height="40dp"
+               android:layout_height="35dp"
               android:layout_marginLeft="145dp"
                 android:layout_marginRight="145dp"
                 android:layout_weight="0.22"
